Italicized a line of text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="swr" class="anchor" href="#swr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SWR</h1>
 
-<p> This is a sample web page for a sample web app repository! Sounds totally crazy, right?! I know!.. </p>
+<p> This is a sample web page for a sample web app repository! Sounds totally crazy, right?! <em>I know!..</em> </p>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
@@ -57,6 +57,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
